# CS581_EncloseHorseSolver

./: .gitignore  README.md  results.csv
horse-pen-main/: Makefile  test_range.sh
horse-pen-main/include/: solver.hpp
horse-pen-main/src/: main.cpp  solver.cpp
horse-pen-nlp/: CMakeLists.txt  README.md  results.csv
horse-pen-nlp/include/: solver.hpp
horse-pen-nlp/src/: grid.cpp  main.cpp  solver.cpp
include/: grid.hpp
